--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "migration-dev": "cross-env NODE_ENV=development npx knex migrate:latest --knexfile ./src/knexfile.ts",
         "seed-dev": "cross-env NODE_ENV=development npx knex seed:run --knexfile ./src/knexfile.ts",
         "setup-dev": "npm run migration-dev && npm run seed-dev",
-        "test": "npm run setup-test && cross-env NODE_ENV=test jest --detectOpenHandles --runInBand",
+        "test": "cross-env NODE_ENV=test jest --detectOpenHandles --runInBand",
         "start-test": "npm run setup-test && cross-env NODE_ENV=test node dist/index.js"
     },
     "keywords": [],
@@ -25,10 +25,12 @@
         "@types/jest": "^29.5.14",
         "@types/node": "^22.10.7",
         "@types/pg": "^8.11.10",
+        "@types/supertest": "^6.0.3",
         "cross-env": "^7.0.3",
         "jest": "^29.7.0",
         "sqlite3": "^5.1.7",
-        "ts-jest": "^29.2.5",
+        "supertest": "^7.1.0",
+        "ts-jest": "^29.3.1",
         "ts-node": "^10.9.2",
         "typescript": "^5.7.3"
     },
