--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "typescript": "^5.7.3"
     },
     "dependencies": {
+        "axios": "^1.8.4",
         "cookie-parser": "^1.4.7",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
